fixed 3 bug fixes, the peer-reviews in todo's now display as yellow and with the proper title, the cancel button for the route /student/<courseName>/<assignmentID>/normal now links back to the previous page, and the overflow of the page on the professor course details page now no longer extends past the expected amount

--- a/frontend/src/main/frontend/src/pages/TeacherPages/styles/ProfessorCourseStyle.css
+++ b/frontend/src/main/frontend/src/pages/TeacherPages/styles/ProfessorCourseStyle.css
@@ -19,6 +19,7 @@
 }
 
 .pcp-components {
+    overflow-x: hidden;
     border-radius: 0 10px 10px 0;
     flex-grow: 1;
     padding: 2%;
